// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/fs/index readLocalDirectory returns dir content 1`] = `
[
  "Cargo.lock",
  "Cargo.toml",
]
`;

exports[`util/fs/index readLocalDirectory returns dir content 2`] = `
[
  "Cargo.lock",
  "Cargo.toml",
  "subdir",
]
`;
